--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,13 @@
     	<groupId>com.h2database</groupId>
     	<artifactId>h2</artifactId>
 	</dependency>
-		
+	
+		<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.1</version>
+</dependency>
+
 	</dependencies>
 
 	<build>
